feat: add mqtt subscription guide link

--- a/iot-knowabunga-2023/esp32-tutorial/4.wifi-and-mqtt.md
+++ b/iot-knowabunga-2023/esp32-tutorial/4.wifi-and-mqtt.md
@@ -280,7 +280,4 @@ void loop() {
 ```
 
 ## Extra
-Find someone else to try listening for MQTT messages using the code below:
-```cpp
-
-```
+Try setting up a subscription following this guide: https://randomnerdtutorials.com/esp32-mqtt-publish-subscribe-arduino-ide/
