fix: typo on board name

--- a/iot-knowabunga-2023/esp32-tutorial/1.init.md
+++ b/iot-knowabunga-2023/esp32-tutorial/1.init.md
@@ -1,7 +1,7 @@
 # Init
 ## Setting up the project
 1. Open Visual Studio Code and the PlatformIO extension.
-2. Create a new project, give it a name and select the `Expressif ESP32 Dev Module`. Pick `Arduino` as the framework. Specify a location or use the default one.
+2. Create a new project, give it a name and select the `Espressif ESP32 Dev Module`. Pick `Arduino` as the framework. Specify a location or use the default one.
 
 This will generate a project with the following file structure:
 
