--- a/iot-knowabunga-2023/esp32-tutorial/2.hardware-interfacing.md
+++ b/iot-knowabunga-2023/esp32-tutorial/2.hardware-interfacing.md
@@ -52,7 +52,7 @@ To illustrate this we will wire a potentiometer to the ESP32. A potentiometer is
 
 <img src="images/potentiometer-wiring.png" width="400px">
 
-4. Somewhere in `void loop()` add the line `int potentiometerValue = analogRead(POT_PIN);` and print the new value to the serial port.
+4. Somewhere in `void loop()` add the line `int potentiometerValue = analogRead(POTENTIOMETER_PIN);` and print the new value to the serial port.
 
 You should now be able to turn the dial on the potentiometer and see the value in the serial port change.
 
@@ -76,7 +76,7 @@ void setup() {
 
 void loop() {
   int buttonState = digitalRead(BUTTON_PIN);
-  int potentiometerValue = analogRead(POT_PIN);
+  int potentiometerValue = analogRead(POTENTIOMETER_PIN);
   int mappedValue = map(potentiometerValue, 0, 4095, 0, 10);
 
   Serial.println(mappedValue);
